syntax = "proto3";
import "google/protobuf/timestamp.proto";


service Search {
    rpc ByQuery(SearchRequest) returns (SearchResponse) {}
    rpc LongQuery(stream BulkRequest) returns (stream BulkResponse) {}
}

message SearchRequest {
    string query            = 1;
    int32 pageNumber        = 2;
    int32 resultPerPage     = 3;
}

message SearchResponse {
    string id           = 1;
    string name         = 2;
    string category     = 3;
}

message BulkRequest {
    string first_name   =   1;
    string last_name    =   2;
}

message BulkResponse {
    string result   =   1;
}





